<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Clucky</string>
  <string name="url">http://185.244.173.142/</string>
  <string name="developer_email">cluckydev@yandex.ru</string>
  <string name="developer_company">Developro</string>
  <string name="title_activity_settings">Settings</string>

  <string name="activity_title_user_list">Users List</string>
  <string name="activity_title_user_details">User Details</string>

  <string name="btn_text_load_data">Load Sample Data</string>
  <string name="btn_text_retry">Retry</string>

  <string name="view_text_email">Email:</string>
  <string name="view_text_followers">Followers:</string>
  <string name="view_text_description">Description:</string>

  <string name="string_content_description">Non accessible view</string>

  <!--Exception messages-->
  <string name="exception_message_generic">There was an application error</string>
  <string name="exception_message_no_connection">There is no internet connection</string>
  <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>

  <!--MainActivity-->
  <!-- Nav bar -->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_main_fragment">Main Fragment</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_about_title">About</string>
  <string name="nav_feedback">Feedback</string>


  <!-- about -->
  <string name="about_title">About</string>
  <string name="about_text"><b>Clucky</b>\n
                              Developer: Developro
                              Email: cluckydev@yandex.ru</string>

  <!-- feedback -->
  <string name="feedback">Feedback</string>
  <string name="title_activity_feedback">Feedback</string>
  <string name="feedback_question">Question</string>
  <string name="feedback_email">E-mail</string>
  <string name="feedback_hint_name">Name</string>
  <string name="feedback_name">Name</string>
  <string name="text_feedback">your text</string>

  <!-- settings -->
  <string name="description_pref_title_login_pin">Lock screen</string>
  <string name="description_pref_title_login_pin_switch_off">Screen lock disabled</string>
  <string name="pref_title_login_pin">Screen lock</string>
  <string name="pref_title_login_pin_name">Screen lock</string>
  <string name="pref_default_login_pin">Screen lock pin</string>

    <!--test-->
    <string name="checkbox1_title">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_title">EditText 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="list1_title">List 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!--test-->


    <!--Clucky-->
  <string name="action_settings">Settings</string>
  <string name="our_team">Our Team</string>
  <string name="about_company">About Company</string>
  <string name="text_about_company">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor dui eros, ut sollicitudin neque accumsan non. Nullam dictum purus ut nisi blandit congue. Duis ultricies lobortis sapien, sed mollis dui congue id. Phasellus varius quam orci, id viverra nisl vestibulum eu. Sed viverra dapibus magna, a dignissim est rhoncus non.</string>
  <string name="text_our_team">У нас есть специалисты для решения любой задачи, от веб-сайтов до сложных бизнес-систем. Мы осуществляем проекты любого масштаба и сложности. У нас есть специалисты для решения любой задачи, от веб-сайтов до сложных бизнес-систем. Мы осуществляем проекты любого масштаба и сложности.</string>
  <string name="answer_a_question">Answer A Question</string>
  <string name="ask_a_question">Ask A Question</string>
  <string name="login">Login</string>
  <string name="no_account_yet_create_one">No account yet? Create one</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="username">Username</string>
  <string name="re_enter_password">Re-enter Password</string>
  <string name="create_account">Create Account</string>
  <string name="already_a_member_login">Already a member? Login</string>
  <string name="authenticating">Authenticating…</string>
  <string name="login_failed">
    LoginActivity failed  \n
    type \'vasya@lol.com\' for the test
      </string>
  <string name="enter_valid_email">enter a valid email address</string>
  <string name="password_length_error">between 4 and 10 alphanumeric characters</string>
  <string name="creating_acctount">Creating Account…</string>
  <string name="name_length_error">at least 3 characters</string>
  <string name="password_do_not_match">Password Do not match</string>

  <!--ID приложения-->
  <integer name="com_vk_sdk_AppId">6635663</integer>
    <!-- Strings related to onLogin -->
  <string name="action_sign_in_short">Sign in with VK</string>
  <string name="action_sign_in_force">Force OAuth</string>
  <string name="continue_using_app">Continue using test application</string>
  <string name="logout">Logout</string>
  <string name="vk">vk</string>
    <string name="view_text_points">Points:</string>
    <string name="view_text_votes">Votes:</string>

  <!--login-->
  <!--pinlock-->
  <string name="pinlock_title">Enter Pin Code</string>
  <string name="pinlock_settitle">Set Pin Code</string>
  <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
  <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
  <string name="pinlock_wrongpin">Wrong Pin code</string>
  <string name="pinlock_secondPin">Enter Pin Code Again</string>
  <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
  <string name="pinlock_fingerprint">Use Fingerprint</string>
  <string name="settings">Settings</string>

</resources>
