<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".view.fragment.FeedbackFragment"
    tools:showIn="@layout/fragment_feedback">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/feedback_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/feedback_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/feedback_hint_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:text="Name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/feedback_email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/feedback_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        tools:text="@string/email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/feedback_question"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/feedback_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/text_feedback"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        tools:text="@string/text_feedback" />

</LinearLayout>
